openshift/service.yml
apiVersion: v1
kind: Service
metadata:
  name: admin-panel
  labels:
    app: admin-panel
spec:
  selector:
    app: admin-panel
  ports:
    - name: http
      port: 8080
      targetPort: http
