openshift/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: admin-panel
  labels:
    app: admin-panel
spec:
  to:
    kind: Service
    name: admin-panel
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
